add graph route
