# src/routes.js
@@ -1,4 +1,5 @@
-const Target = require('./core/controller/target')
+const Target = require('./core/controller/target');
+const Graph = require('./core/controller/graph');
 
 class Routes {
   /**
@@ -11,6 +12,8 @@ class Routes {
   registerRoutes() {
     this._router.post('/v1/targets/register', Target.register);
     this._router.put('/v1/targets/:uid', Target.executeAction);
+
+    this._router.get('/v1/graph', Graph.getGraph);
   }
 }
 
